8200353: Shift or Capslock not working in Textfield after accented keystrokes

Reviewed-by: serb, prr